--- a/Protokoll354.tex
+++ b/Protokoll354.tex
@@ -33,10 +33,24 @@ germandbls={ß},
 
 
 \section{Einleitung}
+Der folgende Versuch gekoppelte Oszillatoren untersucht werden. Bei diesen Systemen handelt es sich um schwingfähige Systeme, welche miteinander in Welchselwirkung stehen und so Energie austauschen können. 
+
+\section{Theorie}
+\begin{equation}
+\nu^+ = \frac{1}{2 \pi \sqrt{LC}}
+\end{equation}
+
+\begin{equation}
+\nu^- =\frac1{2\pi\sqrt{L(\frac1C + \frac2{C_K})}}
+\end{equation}
 
 
 \section{Aufbau und Durchf\"{u}hrung}
-
+\subsection{Vorbereitungen}
+Vor Beginn der Messungen müssen die Resoanzfrequnezen beider Schwinkreise aufeinander abgestimmt werden. Daher ist in einem der Kreise ein Kondensator mit variabler Kapazität verbaut. 
+\subsection{Messung vom Schwebungs- und Schwingungsfrquenz}
+\subsection{Messung der Frequenzen der Fundamentalschwingungen}
+\subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
 \section{Auswertung}
 
 \section{Diskussion}
