--- a/Protokoll354.tex
+++ b/Protokoll354.tex
@@ -54,6 +54,15 @@ Vor Beginn der Messungen müssen die Resoanzfrequnezen beider Schwinkreise aufei
 \section{Auswertung}
 
 \section{Diskussion}
+Sofern nicht anders angegeben, wurden alle Fehler mit python uncertainties berechnet.
+\subsection{Vorbereitungen}
+Für die Justierung des Messaufbaus wurde mit der Grobmessung eine Frequenz von $(30.69\pm0.01)\,kHz$ ermittelt. Die feine Messung mit Hilfe der Lissajous-Figuren ergab eine Resonanzfrequenz von $(30.70\pm0.01) \, kHz$. Der mit L und C theoretisch berechnete Wert liegt bei $30.49 \, kHz$, mit einer Abweichung von $0.68 \%$ ausgezeichnet im Toleranzbereich. Allerdings wurde in der Berechnung des theoretischen Wertes die Kapazität der Spule schon berücksichtigt.
+\subsection{Messung von Schwebungs- und Schwingungsfrequenz}
+Die Perioden pro Schwebungsperiode wurden so genau wie möglich abgelesen. Der Fehler liegt bei maximal $\pm 0.5$ Perioden. Die ermittelten Werte sind der Tabelle EINFÜGEN zu entnehmen.
+
+
+\subsection{Messung der Frequenzen der Fundamentalschwingungen}
+\subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
 
 \section{Literatur- und Abbildungsverzeichnis}
 \begin{itemize}
