--- a/Protokoll354.tex
+++ b/Protokoll354.tex
@@ -47,7 +47,7 @@ Der folgende Versuch gekoppelte Oszillatoren untersucht werden. Bei diesen Syste
 
 \section{Aufbau und Durchf\"{u}hrung}
 \subsection{Vorbereitungen}
-Vor Beginn der Messungen müssen die Resoanzfrequnezen beider Schwinkreise aufeinander abgestimmt werden. Daher ist in einem der Kreise ein Kondensator mit variabler Kapazität verbaut. 
+Vor Beginn der Messungen müssen die Resoanzfrequnezen beider Schwinkreise aufeinander abgestimmt werden. Daher ist in einem der Kreise ein Kondensator mit variabler Kapazität verbaut. Mit dem Sinusgenerator wird nun der Kreis mit konstanter Kapazi\"at gegebe.
 \subsection{Messung vom Schwebungs- und Schwingungsfrquenz}
 \subsection{Messung der Frequenzen der Fundamentalschwingungen}
 \subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
