--- a/Protokoll354.tex
+++ b/Protokoll354.tex
@@ -47,10 +47,17 @@ Der folgende Versuch gekoppelte Oszillatoren untersucht werden. Bei diesen Syste
 
 \section{Aufbau und Durchf\"{u}hrung}
 \subsection{Vorbereitungen}
-Vor Beginn der Messungen müssen die Resoanzfrequnezen beider Schwinkreise aufeinander abgestimmt werden. Daher ist in einem der Kreise ein Kondensator mit variabler Kapazität verbaut. Mit dem Sinusgenerator wird nun der Kreis mit konstanter Kapazi\"at gegebe.
+Vor Beginn der Messungen müssen die Resoanzfrequnezen beider Schwinkreise aufeinander abgestimmt werden. Dazu wird die Schaltung wie in abbildung \ref{abb1} gezeigt aufgebaut. In einem der Kreise ein Kondensator mit variabler Kapazität verbaut. Mit dem Sinusgenerator wird nun der Kreis mit konstanter Kapazi\"at angeregt. Zunächst wird mit dem Oszilloskop im YT-Betrieb die Frequenz ermittelt bei der die gemessene Spannung $U_R$ maximal wird. Dann wird das Oszilloskop in den XY-Modus umgeschaltet die Resonanzfrequnz $\nu_{res}$ bestimmt. Diese zeichnet sich dadurch aus, dass $U_R$ und die Generatorspannung $U_0$ in Phase liegen und daher die angezeigte Lissajouz-Figur eine Gerade ist. Danach wird der Sinusgenerator an den zweiten Teil des Schwingkreises angeschlossen und mit der Frequenz $\nu_{res}$ angeregt. Nun wird auch dieser Kreis durch Verändern der variablen Kapazität in Resonanz gebracht. Dazu werden wie zuvor Lissajouz-figuren verwendet. 
 \subsection{Messung vom Schwebungs- und Schwingungsfrquenz}
+Für diesen Versuchsteil wird die Schaltung wie in Abbildung \ref{abb2} aufgebaut. Der linke Schwingkreis wird durch eine Rechteckspannung zu Schwingungen angeregt. Mit dem Oszilloskop wird nun die am Widerstand $R_??$ abfallende Spannung gemessen. So kann der im rechten Schwingkreis fließende Strom bestimmt. Bei verschieden Koppelkapazitäten $C_K$ wird nun das Verhältnis von Schwingungs- und Schwebungsfrequenz bestimmt. Dazu wird die Zahl $n$ der Schwingungsmaxima in einer Schwebungsperiode bestimmt. Es gilt:
+\begin{equation}
+\frac{\nu_{Schwingung}}{\nu_{Schwebung}} = n
+\end{equation}
 \subsection{Messung der Frequenzen der Fundamentalschwingungen}
+Des Weiteren sollen die Frequenzen $\nu_-$ und $\nu_+$ bestimmt werden. Diese zeichen sich dadurch aus, dass die Phasenverschiebung zwischen der Errgerspannung und dem im Sekundärkreis fließenden Stroms $0$ oder $\pi$ beträgt. Die oben Verwendete Schaltung wird nun mit einer Sinusspannung angeregt und die Generator auf den zweiten Kanal des Oszilloskops gelegt. So kann die Phasenbeziehung von $I$ und $U_0$ mit Hilfe von Lissajouz-Figuren untersucht werden. So werden $\nu_+$ und $\nu_-$ in Abhängikeit von $C_K$ bestimmt.
 \subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
+
+
 \section{Auswertung}
 
 \section{Diskussion}
@@ -62,6 +69,7 @@ Die Perioden pro Schwebungsperiode wurden so genau wie möglich abgelesen. Der F
 
 
 \subsection{Messung der Frequenzen der Fundamentalschwingungen}
+ Zur
 \subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
 
 \section{Literatur- und Abbildungsverzeichnis}
