--- a/Protokoll355.tex
+++ b/Protokoll355.tex
@@ -36,14 +36,31 @@ germandbls={ß},
 Der folgende Versuch gekoppelte Oszillatoren untersucht werden. Bei diesen Systemen handelt es sich um schwingfähige Systeme, welche miteinander in Welchselwirkung stehen und so Energie austauschen können. 
 
 \section{Theorie}
+
+In diesem Versuch sollen zwei Schwingkreise untersucht werden, die über eine gemeinsame Koppelkapazität $C_K$ miteinander wechselwirken (siehe Abb \ref{theorie}). Mit Hilfe der Kirchhoffschen Gesetze kann gezeigt werden, dass der Verlauf der Ströme $I_1$ und $I_2$ durch zwei gekoppelte Differentialgleichungen zweiter Ordnung bestimmt wird. Daraus folgt, dass die $I_1$ und $I_2$ durch eine Überlagerung von zwei so genannten Fundamentalschwingungen beschreiben werden können. Diese haben die Frequenzen
+
+
 \begin{equation}
 \nu^+ = \frac{1}{2 \pi \sqrt{LC}}
 \end{equation}
-
+und 
 \begin{equation}
-\nu^- =\frac1{2\pi\sqrt{L(\frac1C + \frac2{C_K})^-1}}
+\nu^- =\frac1{2\pi\sqrt{L(\frac1C + \frac2{C_K})^-1}}.
 \end{equation}
 
+\noindent
+Im Folgenden soll der Stromverlauf für die Anfangesbedingungen
+\[
+I_1(0) = I_0 \neq 0
+\] 
+und 
+\[
+I_2(0) = 0
+\]
+untersucht werden. Zusätzlich wird angenommen, dass sich die Frequenzen $\nu_+$  und $\nu_-$ sich nur geringfügig unterscheiden. Den in diesem Fall auftretenden Schwingungsvorgang bezeichnet man als Schwebung. Dabei schwingen die Einzelkreise ungefähr mit der Frequenz $\nu_+$. Des weiteren ändert sich die Amplitude der Schwingung mit der Wesentlich geringeren Frequenz 
+\begin{equation}
+\nu_{Schwebung} = \nu_- - \nu_+
+\end{equation}
 
 \section{Aufbau und Durchf\"{u}hrung}
 \subsection{Vorbereitungen}
