--- a/Protokoll355.tex
+++ b/Protokoll355.tex
@@ -33,11 +33,11 @@ germandbls={ß},
 
 
 \section{Einleitung}
-Der folgende Versuch gekoppelte Oszillatoren untersucht werden. Bei diesen Systemen handelt es sich um schwingfähige Systeme, welche miteinander in Welchselwirkung stehen und so Energie austauschen können. 
+Im folgenden Versuch sollen gekoppelte Oszillatoren untersucht werden. Bei diesen Systemen handelt es sich um schwingfähige Systeme, welche miteinander in Wechselwirkung stehen und so Energie austauschen können. 
 
 \section{Theorie}
 
-In diesem Versuch sollen zwei Schwingkreise untersucht werden, die über eine gemeinsame Koppelkapazität $C_K$ miteinander wechselwirken (siehe Abb \ref{theorie}). Mit Hilfe der Kirchhoffschen Gesetze kann gezeigt werden, dass der Verlauf der Ströme $I_1$ und $I_2$ durch zwei gekoppelte Differentialgleichungen zweiter Ordnung bestimmt wird. Daraus folgt, dass die $I_1$ und $I_2$ durch eine Überlagerung von zwei so genannten Fundamentalschwingungen beschreiben werden können. Diese haben die Frequenzen
+In diesem Versuch sollen zwei Schwingkreise untersucht werden, die über eine gemeinsame Koppelkapazität $C_K$ miteinander wechselwirken. Mit Hilfe der Kirchhoffschen Gesetze kann gezeigt werden, dass der Verlauf der Ströme $I_1$ und $I_2$ durch zwei gekoppelte Differentialgleichungen zweiter Ordnung bestimmt wird. Daraus folgt, dass $I_1$ und $I_2$ durch eine Überlagerung von zwei so genannten Fundamentalschwingungen beschreiben werden können. Diese haben die Frequenzen
 
 
 \begin{equation}
@@ -51,7 +51,7 @@ und
 \end{equation}
 
 \noindent
-Im Folgenden soll der Stromverlauf für die Anfangesbedingungen
+Im Folgenden soll der Stromverlauf für die Anfangsbedingungen
 \[
 I_1(0) = I_0 \neq 0
 \] 
@@ -59,21 +59,21 @@ und
 \[
 I_2(0) = 0
 \]
-untersucht werden. Zusätzlich wird angenommen, dass sich die Frequenzen $\nu_+$  und $\nu_-$ sich nur geringfügig unterscheiden. Den in diesem Fall auftretenden Schwingungsvorgang bezeichnet man als Schwebung. Dabei schwingen die Einzelkreise ungefähr mit der Frequenz $\nu_+$. Des weiteren ändert sich die Amplitude der Schwingung mit der Wesentlich geringeren Frequenz 
+untersucht werden. Zusätzlich wird angenommen, dass sich die Frequenzen $\nu_+$  und $\nu_-$ nur geringfügig unterscheiden. Den in diesem Fall auftretenden Schwingungsvorgang bezeichnet man als Schwebung. Dabei schwingen die Einzelkreise ungefähr mit der Frequenz $\nu_+$. Des Weiteren ändert sich die Amplitude der Schwingung mit der wesentlich geringeren Frequenz 
 \begin{equation}
-\nu_{Schwebung} = \nu_- - \nu_+
+\nu_{Schwebung} = \nu_- - \nu_+.
 \end{equation}
 
 \section{Aufbau und Durchf\"{u}hrung}
 \subsection{Vorbereitungen}
-Vor Beginn der Messungen müssen die Resoanzfrequnezen beider Schwinkreise aufeinander abgestimmt werden. Dazu wird die Schaltung wie in abbildung \ref{abb1} gezeigt aufgebaut.
+Vor Beginn der Messungen müssen die Resonanzfrequenzen beider Schwinkreise aufeinander abgestimmt werden. Dazu wird die Schaltung wie in Abbildung \ref{abb1} gezeigt aufgebaut.
 \begin{figure}[htp]
 \centering
 \includegraphics[scale=0.5]{Abb/abb1.png}
 \caption{Schaltung zur Kalibrierung der Schwingkriese}
 \label{abb1}
 \end{figure}
-In einem der Kreise ein Kondensator mit variabler Kapazität verbaut. Mit dem Sinusgenerator wird nun der Kreis mit konstanter Kapazi\"at angeregt. Zunächst wird mit dem Oszilloskop im YT-Betrieb die Frequenz ermittelt bei der die gemessene Spannung $U_R$ maximal wird. Dann wird das Oszilloskop in den XY-Modus umgeschaltet die Resonanzfrequnz $\nu_{res}$ bestimmt. Diese zeichnet sich dadurch aus, dass $U_R$ und die Generatorspannung $U_0$ in Phase liegen und daher die angezeigte Lissajouz-Figur eine Gerade ist. Danach wird der Sinusgenerator an den zweiten Teil des Schwingkreises angeschlossen und mit der Frequenz $\nu_{res}$ angeregt. Nun wird auch dieser Kreis durch Verändern der variablen Kapazität in Resonanz gebracht. Dazu werden wie zuvor Lissajouz-figuren verwendet. 
+In einem der Kreise ist ein Kondensator mit variabler Kapazität verbaut. Mit dem Sinusgenerator wird nun der Kreis mit konstanter Kapazi\"at angeregt. Zunächst wird mit dem Oszilloskop im YT-Betrieb die Frequenz ermittelt, bei der die gemessene Spannung $U_R$ maximal wird. Dann wird das Oszilloskop in den XY-Modus umgeschaltet die Resonanzfrequnz $\nu_{res}$ bestimmt. Diese zeichnet sich dadurch aus, dass $U_R$ und die Generatorspannung $U_0$ in Phase liegen und daher die angezeigte Lissajous-Figur eine Gerade ist. Danach wird der Sinusgenerator an den zweiten Teil des Schwingkreises angeschlossen und mit der Frequenz $\nu_{res}$ angeregt. Nun wird auch dieser Kreis durch Veränderung der variablen Kapazität in Resonanz gebracht. Dazu werden wie zuvor Lissajous-Figuren verwendet. 
 \subsection{Messung vom Schwebungs- und Schwingungsfrquenz}
 Für diesen Versuchsteil wird die Schaltung wie in Abbildung \ref{abb2} aufgebaut.
 \begin{figure}[h!]
@@ -82,21 +82,21 @@ Für diesen Versuchsteil wird die Schaltung wie in Abbildung \ref{abb2} aufgebau
 \caption{Schaltung zur Messung des Verhältnisses von Schwebungs- zu Schwingungfrequenz }
 \label{abb2}
 \end{figure}
- Der linke Schwingkreis wird durch eine Rechteckspannung zu Schwingungen angeregt. Mit dem Oszilloskop wird nun die am Widerstand $R$ abfallende Spannung gemessen. So kann der im rechten Schwingkreis fließende Strom bestimmt. Bei verschieden Koppelkapazitäten $C_K$ wird nun das Verhältnis von Schwingungs- und Schwebungsfrequenz bestimmt. Dazu wird die Zahl $n$ der Schwingungsmaxima in einer Schwebungsperiode bestimmt. Es gilt:
+Der linke Schwingkreis wird durch eine Rechteckspannung zu Schwingungen angeregt. Mit dem Oszilloskop wird nun die am Widerstand $R$ abfallende Spannung gemessen. So kann der im rechten Schwingkreis fließende Strom bestimmt werden. Bei verschiedenen Koppelkapazitäten $C_K$ wird nun das Verhältnis von Schwingungs- und Schwebungsfrequenz bestimmt. Dazu wird die Zahl $n$ der Schwingungsmaxima in einer Schwebungsperiode ermittelt. Es gilt:
 \begin{equation}
 \frac{\nu_{Schwingung}}{\nu_{Schwebung}} = n
 \end{equation}
 \subsection{Messung der Frequenzen der Fundamentalschwingungen}
-Des Weiteren sollen die Frequenzen $\nu_-$ und $\nu_+$ bestimmt werden. Diese zeichen sich dadurch aus, dass die Phasenverschiebung zwischen der Errgerspannung und dem im Sekundärkreis fließenden Stroms $0$ oder $\pi$ beträgt. Die oben Verwendete Schaltung wird nun mit einer Sinusspannung angeregt und die Generator auf den zweiten Kanal des Oszilloskops gelegt (siehe Abb. \ref{abb3}).
+Des Weiteren sollen die Frequenzen $\nu_-$ und $\nu_+$ bestimmt werden. Diese zeichen sich dadurch aus, dass die Phasenverschiebung zwischen der Erregerspannung und dem im Sekundärkreis fließenden Stroms $0$ oder $\pi$ beträgt. Die oben verwendete Schaltung wird nun mit einer Sinusspannung angeregt und das Generatorsignal auf den zweiten Kanal des Oszilloskops gelegt (siehe Abb. \ref{abb3}).
 \begin{figure}[h!]
 \centering
 \includegraphics[scale=0.5]{Abb/abb3.png}
 \caption{Schaltung zur Messung der Frequenzen der Fundamentalschwingungen}
 \label{abb3}
 \end{figure}
- So kann die Phasenbeziehung von $I$ und $U_0$ mit Hilfe von Lissajouz-Figuren untersucht werden. So werden $\nu_+$ und $\nu_-$ in Abhängikeit von $C_K$ bestimmt.
+So kann die Phasenbeziehung von $I$ und $U_0$ mit Hilfe von Lissajous-Figuren untersucht werden. So werden $\nu_+$ und $\nu_-$ in Abhängikeit von $C_K$ bestimmt.
 \subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
-Um den Verlauf des Stroms $I$ im Sekundärkreis bei in Abhängigkeit von der Erregerfrequenz darzustellen, wird die Schaltung wie in Abbildung \ref{abb1} aufgebaut. Mit dem Unterschied, dass der Funktionsgenerator im Sweep-Betreib arbeitet. Dies bedeutet, dass die Frequenz der Errgerspannung nicht mehr konstant ist, sondern steigt in der Zeit $\Delta t = ...\,s$ von $\nu_0 = ..\,Hz$ auf $\nu_1 = ..\,Hz$. Mit der Verlauf der am Widertsand abfallenden spannung gemessen werden. Dabei wird die Zeitbasis des Oszilloskops so eingestellt, dass ein vollständiger Sweep auf dem Schirm zu sehen ist. Anfang und Ende dieses Zyklus entsprechen den Frequenzen $\nu_0$ und $\nu_1$.     
+Um den Verlauf des Stroms $I$ im Sekundärkreis in Abhängigkeit von der Erregerfrequenz darzustellen, wird die Schaltung wie in Abbildung \ref{abb1} aufgebaut. Mit dem Unterschied, dass der Funktionsgenerator im Sweep-Betreib arbeitet. Dies bedeutet, dass die Frequenz der Erregerspannung nicht mehr konstant ist, sondern steigt in der Zeit $\Delta t = 21\,ms$ von $\nu_0 = 3.8\,kHz$ auf $\nu_1 = 74.2\,kHz$. So kann der Verlauf der am Widerstand abfallenden Spannung gemessen werden. Dabei wird die Zeitbasis des Oszilloskops so eingestellt, dass ein vollständiger Sweep auf dem Schirm zu sehen ist. Anfang und Ende dieses Zyklus entsprechen den Frequenzen $\nu_0$ und $\nu_1$.     
 
 
 
@@ -207,7 +207,6 @@ In den anderen Versuchsteilen sind die Abweichungen alle gering.
 \end{enumerate}
 \section{Anhang}
 \begin{itemize}
-\item Tabellen
 \item Auszug aus dem Messheft
 
 
