--- a/Protokoll355.tex
+++ b/Protokoll355.tex
@@ -110,8 +110,7 @@ Des Weiteren sollen die Frequenzen $\nu_-$ und $\nu_+$ bestimmt werden. Diese ze
 So kann die Phasenbeziehung von $I$ und $U_0$ mit Hilfe von Lissajous-Figuren untersucht werden. So werden $\nu_+$ und $\nu_-$ in Abhängikeit von $C_K$ bestimmt.
 \subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
 
-Um den Verlauf des Stroms $I$ im Sekundärkreis bei in Abhängigkeit von der Erregerfrequenz darzustellen, wird die Schaltung wie in Abbildung \ref{abb1} aufgebaut. Mit dem Unterschied, dass der Funktionsgenerator im Sweep-Betreib arbeitet. Dies bedeutet, dass die Frequenz der Errgerspannung nicht mehr konstant ist, sondern steigt in der Zeit $\Delta t =\SI{21}{\milli\second}$ von $\nu_0 = \SI{3,8}{\kilo\hertz}$ auf $\nu_1 = \SI{74,2}{\kilo\hertz}$. Mit der Verlauf der am Widertsand abfallenden spannung gemessen werden. Dabei wird die Zeitbasis des Oszilloskops so eingestellt, dass ein vollständiger Sweep auf dem Schirm zu sehen ist. Anfang und Ende dieses Zyklus entsprechen den Frequenzen $\nu_0$ und $\nu_1$.     
-
+Um den Verlauf des Stroms $I$ im Sekundärkreis bei in Abhängigkeit von der Erregerfrequenz darzustellen, wird die Schaltung wie in Abbildung \ref{abb1} aufgebaut. Mit dem Unterschied, dass der Funktionsgenerator im Sweep-Betreib arbeitet. Dies bedeutet, dass die Frequenz der Erregerspannung nicht mehr konstant ist, sondern steigt in der Zeit $\Delta t =\SI{21}{\milli\second}$ von $\nu_0 = \SI{3,8}{\kilo\hertz}$ auf $\nu_1 = \SI{74,2}{\kilo\hertz}$. Mit der Verlauf der am Widerstand abfallenden Spannung gemessen werden. Dabei wird die Zeitbasis des Oszilloskops so eingestellt, dass ein vollständiger Sweep auf dem Schirm zu sehen ist. Anfang und Ende dieses Zyklus entsprechen den Frequenzen $\nu_0$ und $\nu_1$.     
 
 
 
@@ -140,7 +139,7 @@ ermittelt. Die Frequenz der Schwebung ist durch $\nu_{theo}^--\nu_{theo}^+$ gege
 \noindent
 Die in der Tabelle 3 angebebene Abweichung bezieht sich auf den Unterschied vom experimentellen zum theoretischen Frequenzverhältnis.
 \subsection{Messung der Frequenzen der Fundamentalschwingungen}
-Für die Messung der Frequenzen wurden Lissajous-Figuren benutzt. Die Frequenzen $\nu_+$ und $\nu_-$ wurden aufgenommen als die Generatorspannung und der Strom im Sekundärkreis jeweils gleich- oder gegenphasig verlaufen. Die Frequenzen werden in Tabelle 4 mit den Theoriewerten aus 4.2 Verglichen. Dies ist auch in den Abbildungen \ref{42} und \ref{43} dargestellt. Diese zeigen den Verlauf von $\nu_+$ und $\nu_-$ in Abhängigkeit von der verwendeten Koppelkpazität $C_K$ dar.
+Für die Messung der Frequenzen wurden Lissajous-Figuren benutzt. Die Frequenzen $\nu_+$ und $\nu_-$ wurden aufgenommen als die Generatorspannung und der Strom im Sekundärkreis jeweils gleich- oder gegenphasig verlaufen. Die Frequenzen werden in Tabelle 4 mit den Theoriewerten aus 4.2 Verglichen. Dies ist auch in den Abbildungen \ref{42} und \ref{43} dargestellt. Diese zeigen den Verlauf von $\nu_+$ und $\nu_-$ in Abhängigkeit von der verwendeten Koppelkapazität $C_K$ dar.
 \begin{figure}[h!]
 \centering
 \includegraphics[scale=0.6]{Abb/diag2.png}
@@ -154,7 +153,7 @@ Für die Messung der Frequenzen wurden Lissajous-Figuren benutzt. Die Frequenzen
 \label{43}
 \end{figure}
 \noindent
-Die Berechnungen zeigen eine Abweichung vom Theoriewert von jeweils ca. \SI{1}{\percent}
+Die Berechnungen zeigen eine Abweichung vom Theoriewert von jeweils ca. \SI{1}{\percent}.
 \subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
 Die in dieser Messreihe aufgenommenen Werte sind in Tabelle 5 ersichlich.
 Die bei den zeitlichen Abständen und der Spannung angegebenen Unsicherheiten entsprechen der Hälfte der kleinsten angezeigten Skaleneinteilungen des Oszilloskops. Aus den zeitlichen Abständen $d_1$ und $d_2$ kann mit folgenden Zusammenhängen die zugehörige Frequenz berechnet werden:
