--- a/Protokoll355.tex
+++ b/Protokoll355.tex
@@ -284,16 +284,16 @@ Download am 09.01.14 unter:\\
 \centering
 \begin{tabular}{lllll}
 \toprule
-{$\frac{C_K}{\si{\nano\farad}}$} &{ $\frac{\nu_1}{\si{\Hz}}$} &{ $\frac{\nu_2}{\si{\Hz}}$} &{ $\frac{I_1}{\si{\ampere}}$} &{ $\frac{I_2}{\si{\ampere}}$ }\\
+{$\frac{C_K}{\si{\nano\farad}}$} &{ $\frac{\nu_1}{10\si{\kilo\Hz}}$} &{ $\frac{\nu_2}{10\si{\kilo\Hz}ß}$} &{ $\frac{I_1}{\si{\ampere}}$} &{ $\frac{I_2}{\si{\ampere}}$ }\\
 \midrule
- $1.010 \pm 0.030$  & $\left(3.40 \pm 0.17\right) \times 10^{4}$  & $\left(4.97 \pm 0.17\right) \times 10^{4}$  & $0.0167 \pm 0.0007$  & $0.0123 \pm 0.0007$ \\
- $2.03 \pm 0.06$  & $\left(3.40 \pm 0.17\right) \times 10^{4}$  & $\left(4.34 \pm 0.17\right) \times 10^{4}$  & $0.0171 \pm 0.0007$  & $0.0140 \pm 0.0007$ \\
- $3.00 \pm 0.09$  & $\left(3.40 \pm 0.17\right) \times 10^{4}$  & $\left(4.03 \pm 0.17\right) \times 10^{4}$  & $0.0171 \pm 0.0007$  & $0.0151 \pm 0.0007$ \\
- $4.00 \pm 0.12$  & $\left(3.40 \pm 0.17\right) \times 10^{4}$  & $\left(3.90 \pm 0.17\right) \times 10^{4}$  & $0.0178 \pm 0.0007$  & $0.0158 \pm 0.0007$ \\
- $5.02 \pm 0.15$  & $\left(3.40 \pm 0.17\right) \times 10^{4}$  & $\left(3.77 \pm 0.17\right) \times 10^{4}$  & $0.0182 \pm 0.0007$  & $0.0163 \pm 0.0007$ \\
- $6.47 \pm 0.19$  & $\left(3.40 \pm 0.17\right) \times 10^{4}$  & $\left(3.70 \pm 0.17\right) \times 10^{4}$  & $0.0192 \pm 0.0007$  & $0.0178 \pm 0.0007$ \\
- $8.00 \pm 0.24$  & $\left(3.40 \pm 0.17\right) \times 10^{4}$  & $\left(3.56 \pm 0.17\right) \times 10^{4}$  & $0.0200 \pm 0.0007$  & $0.0184 \pm 0.0007$ \\
- $9.99 \pm 0.30$  & $\left(3.40 \pm 0.17\right) \times 10^{4}$  & $\left(3.56 \pm 0.17\right) \times 10^{4}$  & $0.0212 \pm 0.0007$  & $0.0196 \pm 0.0007$ \\
+ $1.010 \pm 0.030$  & $3.40 \pm 0.17$   & $4.97 \pm 0.17$  & $0.0167 \pm 0.0007$  & $0.0123 \pm 0.0007$ \\
+ $2.03 \pm 0.06$  & $3.40 \pm 0.17$  & $4.34 \pm 0.17$  & $0.0171 \pm 0.0007$  & $0.0140 \pm 0.0007$ \\
+ $3.00 \pm 0.09$  & $3.40 \pm 0.17 $  & $4.03 \pm 0.17$  & $0.0171 \pm 0.0007$  & $0.0151 \pm 0.0007$ \\
+ $4.00 \pm 0.12$  & $3.40 \pm 0.17 $  & $3.90 \pm 0.17$  & $0.0178 \pm 0.0007$  & $0.0158 \pm 0.0007$ \\
+ $5.02 \pm 0.15$  & $3.40 \pm 0.17$  & $3.77 \pm 0.17$  & $0.0182 \pm 0.0007$  & $0.0163 \pm 0.0007$ \\
+ $6.47 \pm 0.19$  & $3.40 \pm 0.17$  & $3.70 \pm 0.17$  & $0.0192 \pm 0.0007$  & $0.0178 \pm 0.0007$ \\
+ $8.00 \pm 0.24$  & $3.40 \pm 0.17$  & $3.56 \pm 0.17$  & $0.0200 \pm 0.0007$  & $0.0184 \pm 0.0007$ \\
+ $9.99 \pm 0.30$  & $3.40 \pm 0.17 $  & $3.56 \pm 0.17$  & $0.0212 \pm 0.0007$  & $0.0196 \pm 0.0007$ \\
 \bottomrule
 \end{tabular}
 \label{}
